		Improved the "pretty print" of components in the tree dump,
		by moving it out to a per-component virtual function.
20100901	Beginning on CacheComponent (a generic memory cache component).
20100910	The mechanism for detecting when to assert MIPS compare
		interrupts could sometimes stop delivering interrupts, if the
		count register was read. Fixed by keeping track of how many
		times the register is read and reverting it before doing the
		count/compare interrupt assert check. (Thanks to Jakub Jermar
		for noticing this bug using HelenOS.)
20100912	Updating the NetBSD/hpcmips guest operating system install
		instructions from 4.0.1 to 5.0.2, and the NetBSD/algor install
		instructions from 3.1 to 5.0.2.
20110212	Updating the NetBSD/pmax install instructions: 5.0.2 -> 5.1.
		Updating OpenBSD/landisk instructions: 4.7 -> 4.8.
20110606	Updating the documentation on how to start Dreamcast binaries,
		and updating from NetBSD/dreamcast 5.0.1 to 5.1.
20110609	Adding automagic guessing of Dreamcast ISO filesystem offset,
		so that Linux/dreamcast can be booted without specifying the
		offset.
		Booting Dreamcast via bootblock now uses software PROM starting
		point instead of calling a particular bootblock address, making
		it possible to run a complete boot sequence in more cases.
		When unimplemented SuperH instructions cause an abort failure,
		GXemul now drops into the debugger instead of calling exit()
		(if started with -K).
20110610	In SH4 instruction trace, include address in printout in a few
		more cases than before.
		Make NetBSD/dreamcast etc. boot correctly with 480 pixels in
		the y direction (random read hack from PDTRA).
		Use the 8x16 font as a fake Dreamcast ROM font.
		Adding fake/skeleton Dreamcast ROM SYSINFO_INIT, SYSINFO_ID,
		FLASHROM_INIT, and FLASHROM_READ calls.
20110616	Adding Dreamcast devices as symbols, so that runtime debugging
		will show meaningful names instead of just addresses, when
		reading and writing device registers.